Added files for basic landing page
Added files, with the use of SASS as a main CSS pre-processor

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,8 @@
 // Color
-$primary-color: #fff;
-$secondary-color: #576be0;
-$bg-color-1: #212644;
-$bg-color-2: #ffffff;
+$white: #fff;
+$transparent-white: rgba(255, 255, 255, 0.3);
+$light-blue: #576be0;
+$dark-blue: #212644;
 
 // Font
-$font-stack: Helvetica, sans-serif;
+$font-stack: 'Montserrat', sans-serif;
