--- a/styles/_landing-page.scss
+++ b/styles/_landing-page.scss
@@ -1,33 +1,50 @@
 @use './variables' as *;
-
-@mixin displayFlex() {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-@mixin newPage($theme: $primary-color) {
-    width: 100%;
-    height: 100vh;
-    background-color: $theme;
-}
+@use './mixins' as *;
 
 #landing-page {
-    @include newPage($bg-color-1);
+    @include newPage(100%, 85.8vh, $dark-blue);
     @include displayFlex;
     flex-direction: column;
     text-align: center;
 }
 
-#container {
-    background-color: $secondary-color;
-    width: 600px;
-    height: 400px;
+#main-container {
+    background-color: $dark-blue;
+    width: 80%;
+    height: 700px;
     
-    @include displayFlex;
+    @include displayFlex();
+
+    img {
+        height: 500px;
+    }
+
+}
+
+#main-container-right {
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+
+    h1 {
+        color: white;
+        font-size: 5rem;
+        padding-bottom: 50px;
+    }
+    
+    span {
+        background: linear-gradient(90deg, #ff03e2, #ff00bf, #ff2e9f, #ff5285, #ff7072, #ff8a66, #ffa164, #ffb56b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 
     p {
-        color: $primary-color;
+        color: $white;
         font-size: 2rem;
     }
+}
+
+p {
+    color: $transparent-white;
 }
